# helper-wab2b-dashboard-system

./: INSTALL.md  PROTOCOL.md  README.md  tailwind.config.js
.github/workflows/: release.yml
electron-wab2b-helper/: index.html  package-lock.json  package.json  vite.config.js
electron-wab2b-helper/electron/: main.js  preload.js
electron-wab2b-helper/src/: App.jsx  index.css  main.jsx
tools/: bump-version.js
wab2b-helper/: .gitignore  README.md  RELEASE.md  RELEASE_FORMAT.md  build.ps1  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  vite.config.ts
wab2b-helper/.cargo/: config.toml
wab2b-helper/backend/: Cargo.toml  tauri.conf.json
wab2b-helper/backend/capabilities/: default.json
wab2b-helper/backend/src/: lib.rs
wab2b-helper/frontend/: App.tsx  index.css
wab2b-helper/frontend/components/: AttachmentHandler.tsx  MediaModal.tsx  ThemeToggle.tsx  ToastContainer.tsx  UpdateNotification.tsx
wab2b-helper/frontend/icons/: MoonIcon.tsx  SunIcon.tsx
wab2b-helper/frontend/types/: animejs.d.ts
wab2b-helper/scripts/: generate-checksums.js
wab2b-helper/src/: App.css  App.tsx  index.css  vite-env.d.ts
wab2b-helper/src-tauri/: Cargo.toml  tauri.conf.json
wab2b-helper/src-tauri/capabilities/: main.json
wab2b-helper/src-tauri/src/: lib.rs  main.rs  settings.rs
wab2b-helper/src-tauri/src/updater/: github.rs  hash.rs  installer.rs  mod.rs
wab2b-helper/src/components/: ActionButtons.tsx  DropZone.tsx  FilePreview.tsx  MediaModal.tsx  ProgressBar.tsx  SettingsIcon.tsx  SettingsModal.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TitleBar.tsx  Toast.tsx  ToastContainer.tsx  UpdateButton.tsx
wab2b-helper/src/updater/: index.ts  tauriBridge.ts  types.ts  updateManager.ts
wab2b-helper/src/updater/components/: DownloadProgress.tsx  UpdateNotification.tsx  UpdateNotificationModal.tsx  UpdateSettings.tsx  index.ts
