[package]
name = "wab2b-helper"
version = "1.0.3"
description = "A Desktop App, which is a helper for dashboard.wab2b.com for copying attachments."
authors = ["Asdmir786"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wab2b_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-opener = "2.4.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-deep-link = "2.4.0"
tauri-plugin-updater = "2.9.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }

